@@ -1,3 +1,8 @@
+2002-08-27  Seth Robertson  <seth@winwood.sysdetect.com>
+
+	* lib/b_string.c (bk_strhash): Combine old and new string hash
+	functions into one, with flag selection, old default.
+
 2002-08-27  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk_oscompat.h (BK_FUNCNAME): Insure doesn't grok __func__
